--- a/machine-learning-with-python/ML0101EN-Clas-SVM-cancer.jupyterlite.ipynb
+++ b/machine-learning-with-python/ML0101EN-Clas-SVM-cancer.jupyterlite.ipynb
@@ -774,27 +774,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.9444444444444444"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Avg F1-score: 0.9639\n",
+      "Jaccard score: 0.9444\n"
+     ]
     }
    ],
    "source": [
-    "# write your code here\n",
-    "from sklearn import svm\n",
-    "clf = svm.SVC(kernel='linear')\n",
-    "clf.fit(X_train, y_train) \n",
-    "f1_score(y_test, yhat, average='weighted') \n",
-    "jaccard_score(y_test, yhat,pos_label=2)"
+    "clf2 = svm.SVC(kernel='linear')\n",
+    "clf2.fit(X_train, y_train) \n",
+    "yhat2 = clf2.predict(X_test)\n",
+    "print(\"Avg F1-score: %.4f\" % f1_score(y_test, yhat2, average='weighted'))\n",
+    "print(\"Jaccard score: %.4f\" % jaccard_score(y_test, yhat2,pos_label=2))"
    ]
   },
   {
