--- a/applied_data_science_capstone/jupyter-labs-spacex-data-collection-api.ipynb
+++ b/applied_data_science_capstone/jupyter-labs-spacex-data-collection-api.ipynb
@@ -1695,6 +1695,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('dataset_part_1.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
