--- a/applied_data_science_capstone/jupyter-labs-spacex-data-collection-api.ipynb
+++ b/applied_data_science_capstone/jupyter-labs-spacex-data-collection-api.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
        "200"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +788,7 @@
        "4                 https://en.wikipedia.org/wiki/RazakSAT       NaN  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +888,7 @@
        "[]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +932,7 @@
        "['Falcon 1', 'Falcon 1', 'Falcon 1', 'Falcon 1', 'Falcon 9']"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
        "1598"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +1097,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1118,27 +1118,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Must have equal len keys and value when setting with an iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[73], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mfalcon_9\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloc\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mFlightNumber\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, data\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m))\n\u001b[1;32m      2\u001b[0m falcon_9\u001b[38;5;241m.\u001b[39mhead()\n",
-      "File \u001b[0;32m~/PycharmProjects/coursera-data-science/lib/python3.11/site-packages/pandas/core/indexing.py:885\u001b[0m, in \u001b[0;36m_LocationIndexer.__setitem__\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m    882\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_has_valid_setitem_indexer(key)\n\u001b[1;32m    884\u001b[0m iloc \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mname \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124miloc\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj\u001b[38;5;241m.\u001b[39miloc\n\u001b[0;32m--> 885\u001b[0m \u001b[43miloc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_setitem_with_indexer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mindexer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/PycharmProjects/coursera-data-science/lib/python3.11/site-packages/pandas/core/indexing.py:1893\u001b[0m, in \u001b[0;36m_iLocIndexer._setitem_with_indexer\u001b[0;34m(self, indexer, value, name)\u001b[0m\n\u001b[1;32m   1890\u001b[0m \u001b[38;5;66;03m# align and set the values\u001b[39;00m\n\u001b[1;32m   1891\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m take_split_path:\n\u001b[1;32m   1892\u001b[0m     \u001b[38;5;66;03m# We have to operate column-wise\u001b[39;00m\n\u001b[0;32m-> 1893\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_setitem_with_indexer_split_path\u001b[49m\u001b[43m(\u001b[49m\u001b[43mindexer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1894\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1895\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_setitem_single_block(indexer, value, name)\n",
-      "File \u001b[0;32m~/PycharmProjects/coursera-data-science/lib/python3.11/site-packages/pandas/core/indexing.py:1949\u001b[0m, in \u001b[0;36m_iLocIndexer._setitem_with_indexer_split_path\u001b[0;34m(self, indexer, value, name)\u001b[0m\n\u001b[1;32m   1944\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(value) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m is_integer(info_axis):\n\u001b[1;32m   1945\u001b[0m         \u001b[38;5;66;03m# This is a case like df.iloc[:3, [1]] = [0]\u001b[39;00m\n\u001b[1;32m   1946\u001b[0m         \u001b[38;5;66;03m#  where we treat as df.iloc[:3, 1] = 0\u001b[39;00m\n\u001b[1;32m   1947\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_setitem_with_indexer((pi, info_axis[\u001b[38;5;241m0\u001b[39m]), value[\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m-> 1949\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m   1950\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMust have equal len keys and value \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1951\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwhen setting with an iterable\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1952\u001b[0m     )\n\u001b[1;32m   1954\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m lplane_indexer \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(value) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj\u001b[38;5;241m.\u001b[39mindex):\n\u001b[1;32m   1955\u001b[0m     \u001b[38;5;66;03m# We get here in one case via .loc with a all-False mask\u001b[39;00m\n\u001b[1;32m   1956\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n",
-      "\u001b[0;31mValueError\u001b[0m: Must have equal len keys and value when setting with an iterable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "falcon_9.loc[:,'FlightNumber'] = list(range(1, data.shape[0]+1))\n",
-    "falcon_9.head()"
+    "# falcon_9.loc[:,'FlightNumber'] = list(range(1, data.shape[0]+1))\n",
+    "# falcon_9.head()"
    ]
   },
   {
@@ -1157,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1183,7 +1168,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1215,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1294,7 @@
        "[94 rows x 1 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1322,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1345,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1670,7 +1655,7 @@
        "[94 rows x 17 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
