Add presentation and update the notebooks

--- a/applied_data_science_capstone/jupyter-labs-eda-sql-coursera_sqllite.ipynb
+++ b/applied_data_science_capstone/jupyter-labs-eda-sql-coursera_sqllite.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "<p style=\"text-align:center\">\n",
     "    <a href=\"https://skills.network\" target=\"_blank\">\n",
     "    <img src=\"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/assets/logos/SN_web_lightmode.png\" width=\"200\" alt=\"Skills Network Logo\">\n",
@@ -59,27 +60,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting sqlalchemy==1.3.9\n",
-      "  Downloading SQLAlchemy-1.3.9.tar.gz (6.0 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.0/6.0 MB\u001b[0m \u001b[31m9.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hBuilding wheels for collected packages: sqlalchemy\n",
-      "  Building wheel for sqlalchemy (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for sqlalchemy: filename=SQLAlchemy-1.3.9-cp311-cp311-linux_x86_64.whl size=1192629 sha256=4d3cbd2464e12b8504819bdcb7a3023c41fc7dde87643199bf1d2ee9381b283e\n",
-      "  Stored in directory: /home/thunderhorn/.cache/pip/wheels/3a/7c/1e/12404784a68083eb969f877a1808a1847bab897684b56ddc55\n",
-      "Successfully built sqlalchemy\n",
-      "Installing collected packages: sqlalchemy\n",
-      "Successfully installed sqlalchemy-1.3.9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install sqlalchemy==1.3.9\n"
+    "#!pip install sqlalchemy==1.3.9\n"
    ]
   },
   {
@@ -93,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +124,7 @@
        "101"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +161,7 @@
        "[]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +231,7 @@
        "[('CCAFS LC-40',), ('VAFB SLC-4E',), ('KSC LC-39A',), ('CCAFS SLC-40',)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +354,7 @@
        " ('2013-03-01', '15:10:00', 'F9 v1.0  B0007', 'CCAFS LC-40', 'SpaceX CRS-2', 677, 'LEO (ISS)', 'NASA (CRS)', 'Success', 'No attempt')]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -411,27 +394,27 @@
        "<table>\n",
        "    <thead>\n",
        "        <tr>\n",
-       "            <th>COUNT(*)</th>\n",
+       "            <th>payload_mass</th>\n",
        "        </tr>\n",
        "    </thead>\n",
        "    <tbody>\n",
        "        <tr>\n",
-       "            <td>20</td>\n",
+       "            <td>45596</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(20,)]"
+       "[(45596,)]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql SELECT COUNT(*) FROM SPACEXTABLE WHERE Customer = 'NASA (CRS)';\n"
+    "%sql SELECT SUM(PAYLOAD_MASS__KG_) as payload_mass FROM SPACEXTABLE WHERE Customer = 'NASA (CRS)';\n"
    ]
   },
   {
@@ -448,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +448,7 @@
        "<table>\n",
        "    <thead>\n",
        "        <tr>\n",
-       "            <th>AVG(PAYLOAD_MASS__KG_)</th>\n",
+       "            <th>AVG_PAYLOAD_MASS</th>\n",
        "        </tr>\n",
        "    </thead>\n",
        "    <tbody>\n",
@@ -479,13 +462,13 @@
        "[(2534.6666666666665,)]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql SELECT AVG(PAYLOAD_MASS__KG_) FROM SPACEXTABLE WHERE Booster_Version LIKE 'f9 v1.1%';"
+    "%sql SELECT AVG(PAYLOAD_MASS__KG_) as AVG_PAYLOAD_MASS FROM SPACEXTABLE WHERE Booster_Version LIKE 'f9 v1.1%';"
    ]
   },
   {
@@ -584,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +584,7 @@
        "<table>\n",
        "    <thead>\n",
        "        <tr>\n",
-       "            <th>MIN(Date)</th>\n",
+       "            <th>first_successful_landing</th>\n",
        "        </tr>\n",
        "    </thead>\n",
        "    <tbody>\n",
@@ -615,13 +598,13 @@
        "[('2015-12-22',)]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql SELECT MIN(Date) FROM SPACEXTABLE WHERE Landing_Outcome='Success (ground pad)';"
+    "%sql SELECT MIN(Date)as first_successful_landing FROM SPACEXTABLE WHERE Landing_Outcome='Success (ground pad)';"
    ]
   },
   {
@@ -976,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1020,13 +1003,17 @@
        " ('04', 'F9 v1.1 B1015', 'Failure (drone ship)', 'CCAFS LC-40')]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql SELECT substr(Date,6,2) as Month, Booster_Version, Landing_Outcome, Launch_Site FROM SPACEXTABLE WHERE substr(Date,0,5)=\"2015\" AND Landing_Outcome LIKE \"Fail%\"; "
+    "%%sql SELECT substr(Date,6,2) as Month, \n",
+    "Booster_Version,\n",
+    "Landing_Outcome,\n",
+    "Launch_Site \n",
+    "FROM SPACEXTABLE WHERE substr(Date,0,5)=\"2015\" AND Landing_Outcome LIKE \"Fail%\"; "
    ]
   },
   {
@@ -1043,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1074,50 +1061,38 @@
        "    </thead>\n",
        "    <tbody>\n",
        "        <tr>\n",
-       "            <td>2015-01-10</td>\n",
-       "            <td>9:47:00</td>\n",
-       "            <td>F9 v1.1 B1012</td>\n",
-       "            <td>CCAFS LC-40</td>\n",
-       "            <td>SpaceX CRS-5</td>\n",
-       "            <td>2395</td>\n",
+       "            <td>2017-02-19</td>\n",
+       "            <td>14:39:00</td>\n",
+       "            <td>F9 FT B1031.1</td>\n",
+       "            <td>KSC LC-39A</td>\n",
+       "            <td>SpaceX CRS-10</td>\n",
+       "            <td>2490</td>\n",
        "            <td>LEO (ISS)</td>\n",
        "            <td>NASA (CRS)</td>\n",
-       "            <td>Success</td>\n",
-       "            <td>Failure (drone ship)</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>2015-04-14</td>\n",
-       "            <td>20:10:00</td>\n",
-       "            <td>F9 v1.1 B1015</td>\n",
-       "            <td>CCAFS LC-40</td>\n",
-       "            <td>SpaceX CRS-6</td>\n",
-       "            <td>1898</td>\n",
-       "            <td>LEO (ISS)</td>\n",
-       "            <td>NASA (CRS)</td>\n",
-       "            <td>Success</td>\n",
-       "            <td>Failure (drone ship)</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>2015-12-22</td>\n",
-       "            <td>1:29:00</td>\n",
-       "            <td>F9 FT B1019</td>\n",
-       "            <td>CCAFS LC-40</td>\n",
-       "            <td>OG2 Mission 2  11 Orbcomm-OG2 satellites</td>\n",
-       "            <td>2034</td>\n",
-       "            <td>LEO</td>\n",
-       "            <td>Orbcomm</td>\n",
        "            <td>Success</td>\n",
        "            <td>Success (ground pad)</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>2016-01-17</td>\n",
-       "            <td>18:42:00</td>\n",
-       "            <td>F9 v1.1 B1017</td>\n",
-       "            <td>VAFB SLC-4E</td>\n",
-       "            <td>Jason-3</td>\n",
-       "            <td>553</td>\n",
-       "            <td>LEO</td>\n",
-       "            <td>NASA (LSP) NOAA CNES</td>\n",
+       "            <td>2016-07-18</td>\n",
+       "            <td>4:45:00</td>\n",
+       "            <td>F9 FT B1025.1</td>\n",
+       "            <td>CCAFS LC-40</td>\n",
+       "            <td>SpaceX CRS-9</td>\n",
+       "            <td>2257</td>\n",
+       "            <td>LEO (ISS)</td>\n",
+       "            <td>NASA (CRS)</td>\n",
+       "            <td>Success</td>\n",
+       "            <td>Success (ground pad)</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2016-06-15</td>\n",
+       "            <td>14:29:00</td>\n",
+       "            <td>F9 FT B1024</td>\n",
+       "            <td>CCAFS LC-40</td>\n",
+       "            <td>ABS-2A Eutelsat 117 West B</td>\n",
+       "            <td>3600</td>\n",
+       "            <td>GTO</td>\n",
+       "            <td>ABS Eutelsat</td>\n",
        "            <td>Success</td>\n",
        "            <td>Failure (drone ship)</td>\n",
        "        </tr>\n",
@@ -1134,62 +1109,77 @@
        "            <td>Failure (drone ship)</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>2016-06-15</td>\n",
-       "            <td>14:29:00</td>\n",
-       "            <td>F9 FT B1024</td>\n",
-       "            <td>CCAFS LC-40</td>\n",
-       "            <td>ABS-2A Eutelsat 117 West B</td>\n",
-       "            <td>3600</td>\n",
-       "            <td>GTO</td>\n",
-       "            <td>ABS Eutelsat</td>\n",
+       "            <td>2016-01-17</td>\n",
+       "            <td>18:42:00</td>\n",
+       "            <td>F9 v1.1 B1017</td>\n",
+       "            <td>VAFB SLC-4E</td>\n",
+       "            <td>Jason-3</td>\n",
+       "            <td>553</td>\n",
+       "            <td>LEO</td>\n",
+       "            <td>NASA (LSP) NOAA CNES</td>\n",
        "            <td>Success</td>\n",
        "            <td>Failure (drone ship)</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>2016-07-18</td>\n",
-       "            <td>4:45:00</td>\n",
-       "            <td>F9 FT B1025.1</td>\n",
+       "            <td>2015-12-22</td>\n",
+       "            <td>1:29:00</td>\n",
+       "            <td>F9 FT B1019</td>\n",
        "            <td>CCAFS LC-40</td>\n",
-       "            <td>SpaceX CRS-9</td>\n",
-       "            <td>2257</td>\n",
-       "            <td>LEO (ISS)</td>\n",
-       "            <td>NASA (CRS)</td>\n",
+       "            <td>OG2 Mission 2  11 Orbcomm-OG2 satellites</td>\n",
+       "            <td>2034</td>\n",
+       "            <td>LEO</td>\n",
+       "            <td>Orbcomm</td>\n",
        "            <td>Success</td>\n",
        "            <td>Success (ground pad)</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>2017-02-19</td>\n",
-       "            <td>14:39:00</td>\n",
-       "            <td>F9 FT B1031.1</td>\n",
-       "            <td>KSC LC-39A</td>\n",
-       "            <td>SpaceX CRS-10</td>\n",
-       "            <td>2490</td>\n",
+       "            <td>2015-04-14</td>\n",
+       "            <td>20:10:00</td>\n",
+       "            <td>F9 v1.1 B1015</td>\n",
+       "            <td>CCAFS LC-40</td>\n",
+       "            <td>SpaceX CRS-6</td>\n",
+       "            <td>1898</td>\n",
        "            <td>LEO (ISS)</td>\n",
        "            <td>NASA (CRS)</td>\n",
        "            <td>Success</td>\n",
-       "            <td>Success (ground pad)</td>\n",
+       "            <td>Failure (drone ship)</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2015-01-10</td>\n",
+       "            <td>9:47:00</td>\n",
+       "            <td>F9 v1.1 B1012</td>\n",
+       "            <td>CCAFS LC-40</td>\n",
+       "            <td>SpaceX CRS-5</td>\n",
+       "            <td>2395</td>\n",
+       "            <td>LEO (ISS)</td>\n",
+       "            <td>NASA (CRS)</td>\n",
+       "            <td>Success</td>\n",
+       "            <td>Failure (drone ship)</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('2015-01-10', '9:47:00', 'F9 v1.1 B1012', 'CCAFS LC-40', 'SpaceX CRS-5', 2395, 'LEO (ISS)', 'NASA (CRS)', 'Success', 'Failure (drone ship)'),\n",
-       " ('2015-04-14', '20:10:00', 'F9 v1.1 B1015', 'CCAFS LC-40', 'SpaceX CRS-6', 1898, 'LEO (ISS)', 'NASA (CRS)', 'Success', 'Failure (drone ship)'),\n",
-       " ('2015-12-22', '1:29:00', 'F9 FT B1019', 'CCAFS LC-40', 'OG2 Mission 2  11 Orbcomm-OG2 satellites', 2034, 'LEO', 'Orbcomm', 'Success', 'Success (ground pad)'),\n",
-       " ('2016-01-17', '18:42:00', 'F9 v1.1 B1017', 'VAFB SLC-4E', 'Jason-3', 553, 'LEO', 'NASA (LSP) NOAA CNES', 'Success', 'Failure (drone ship)'),\n",
-       " ('2016-03-04', '23:35:00', 'F9 FT B1020', 'CCAFS LC-40', 'SES-9', 5271, 'GTO', 'SES', 'Success', 'Failure (drone ship)'),\n",
-       " ('2016-06-15', '14:29:00', 'F9 FT B1024', 'CCAFS LC-40', 'ABS-2A Eutelsat 117 West B', 3600, 'GTO', 'ABS Eutelsat', 'Success', 'Failure (drone ship)'),\n",
+       "[('2017-02-19', '14:39:00', 'F9 FT B1031.1', 'KSC LC-39A', 'SpaceX CRS-10', 2490, 'LEO (ISS)', 'NASA (CRS)', 'Success', 'Success (ground pad)'),\n",
        " ('2016-07-18', '4:45:00', 'F9 FT B1025.1', 'CCAFS LC-40', 'SpaceX CRS-9', 2257, 'LEO (ISS)', 'NASA (CRS)', 'Success', 'Success (ground pad)'),\n",
-       " ('2017-02-19', '14:39:00', 'F9 FT B1031.1', 'KSC LC-39A', 'SpaceX CRS-10', 2490, 'LEO (ISS)', 'NASA (CRS)', 'Success', 'Success (ground pad)')]"
+       " ('2016-06-15', '14:29:00', 'F9 FT B1024', 'CCAFS LC-40', 'ABS-2A Eutelsat 117 West B', 3600, 'GTO', 'ABS Eutelsat', 'Success', 'Failure (drone ship)'),\n",
+       " ('2016-03-04', '23:35:00', 'F9 FT B1020', 'CCAFS LC-40', 'SES-9', 5271, 'GTO', 'SES', 'Success', 'Failure (drone ship)'),\n",
+       " ('2016-01-17', '18:42:00', 'F9 v1.1 B1017', 'VAFB SLC-4E', 'Jason-3', 553, 'LEO', 'NASA (LSP) NOAA CNES', 'Success', 'Failure (drone ship)'),\n",
+       " ('2015-12-22', '1:29:00', 'F9 FT B1019', 'CCAFS LC-40', 'OG2 Mission 2  11 Orbcomm-OG2 satellites', 2034, 'LEO', 'Orbcomm', 'Success', 'Success (ground pad)'),\n",
+       " ('2015-04-14', '20:10:00', 'F9 v1.1 B1015', 'CCAFS LC-40', 'SpaceX CRS-6', 1898, 'LEO (ISS)', 'NASA (CRS)', 'Success', 'Failure (drone ship)'),\n",
+       " ('2015-01-10', '9:47:00', 'F9 v1.1 B1012', 'CCAFS LC-40', 'SpaceX CRS-5', 2395, 'LEO (ISS)', 'NASA (CRS)', 'Success', 'Failure (drone ship)')]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql SELECT * FROM SPACEXTABLE WHERE (Landing_Outcome=\"Failure (drone ship)\" OR Landing_Outcome=\"Success (ground pad)\") AND  substr(Date, 0, 11) BETWEEN '2010-06-04' AND '2017-03-20';"
+    "%%sql SELECT * FROM SPACEXTABLE \n",
+    "WHERE (Landing_Outcome=\"Failure (drone ship)\" OR Landing_Outcome=\"Success (ground pad)\") \n",
+    "AND substr(Date, 0, 11) BETWEEN '2010-06-04' AND '2017-03-20' \n",
+    "ORDER BY Date DESC;"
    ]
   },
   {
